@@ -40,6 +40,7 @@ Steve Ingram <si@maps-r-us.com>
 Tapani Tarvainen <tarvaine@tukki.jyu.fi>
 Timothy J Luoma <luomat@peak.org>
 Tom R.Hageman <tom@basil.icce.rug.nl>
+Ulrich Drepper <drepper@redhat.com>
 Vladimir Volovich <vvv@vvv.vsu.ru>
 Wichert Akkerman <wakkerma@debian.org>
 
